@startuml
class Auditorium
{
    +Id : int
    +Name: string
    +Seats : uint
}

class Film
{
    +Id : int
    +Title : string
    +Year : string
    +Rated : string
    +Released : string
    +RuntimeMinutes : int
    +Genre : string
    +Director : string
    +Writer : string
    +Actors : string
    +Plot : string
    +Language : string
    +Country : string
    +Awards : string
    +Poster : string
    +Metascore : string
    +ImdbRating : string
    +ImdbVotes : string
    +ImdbId : string
    +Type : string
    +DVD : string
    +BoxOffice : string
    +Production : string
    +Website : string
    +Response : string
    +ScreeningsAllowed : uint
    +HasScreeningsRemaining : bool
    +DecrementScreeningsAllowed()
}

class Reservation 
{
    Id: int
    ScreeningId : int
    Screening : Screening
    Seats : uint
    ReservationCode : string
    ReservationCodeCheckedIn : bool
    EmailAddress : string
    ReservationDate : datetime
}

class Screening
{
    +Id : int
    +FilmId : int
    +Film : Film
    +AuditoriumId : int
    +Auditorium : Auditorium
    +Starts : DateTime
    +TicketPrice : int
    +BookedSeats : uint
    +TotalSeatsForScreening : uint
    +AvailableSeats : uint
    +SeatRestriction : bool
    +IncrementBookedSeats(uint seats)
    +DecrementBookedSeats(uint seats)
    
}
' If SeatRestriction == true, AvailableSeats / 2

class Review
{
    Id: int
    FilmId: int
    Film: Film
    Comment: string
    Rating : uint
    ReviewDate: DateOnly
}

Screening <|-- Film
Screening <|-- Auditorium
Reservation <|-- Screening
Film <|-- Review
@enduml